--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "dayjs": "^1.11.13",
     "pinia": "^2.2.4",
     "vue": "^3.5.12",
-    "vue-router": "^4.4.5"
+    "vue-router": "^4.4.5",
+    "vue-tippy": "^6.5.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.13.0",
