--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "format": "prettier --write src/"
   },
   "dependencies": {
+    "@element-plus/icons-vue": "^2.3.1",
     "dayjs": "^1.11.13",
     "element-plus": "^2.8.6",
     "pinia": "^2.2.4",
